# gorillas

./: .gitignore  CMakeLists.txt  README.md  gorillas
archived/: main.c
doc/: ncurses_esc_chars.md
src/: main.c
